--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ db.sqlite3-journal
 media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
-# in your Git repository. Update and uncomment the following line accordingly.
+# in your Git repository. Update and uncomment the foFllowing line accordingly.
 # <django-project-name>/staticfiles/
 
 ### Django.Python Stack ###
